--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "bootstrap": "^5.0.1",
     "gatsby": "^3.6.2",
+    "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-google-analytics": "^3.7.1",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-manifest": "^3.7.1",
@@ -24,10 +26,13 @@
     "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-sitemap": "^4.3.1",
     "gatsby-plugin-styled-components": "^4.7.1",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^3.7.1",
     "gatsby-source-sanity": "^7.0.7",
     "gatsby-transformer-sharp": "^3.7.1",
+    "gbimage-bridge": "^0.1.4",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.0"
